--- a/spec.html
+++ b/spec.html
@@ -9,7 +9,7 @@
     <body>
     <header>Logan's Geometric Paintings
         <p class="subtitle">decor for your everyday life</p></header>
-    <nav><button><a href="main.html">Home</a></button>
+    <nav><button><a href="index.html">Home</a></button>
         <button><a href="about.html">Landscapes</a></button>
         <button><a href="portrait.html">Portrait</a></button>
         <button><a href="abstract.html">Abstract</a></button>
